--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.13.1",
+    "react-query": "^3.12.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
